# MobileReverseHub

./: README.md
APKFortress/Extractor/: settings.gradle
APKFortress/Extractor/app/: build.gradle
APKFortress/Extractor/app/libs/bytehook/: build.gradle  consumer-rules.pro  local_dependency.cmake
APKFortress/Extractor/app/libs/bytehook/src/main/cpp/: CMakeLists.txt  bh_array.c  bh_array.h  bh_cfi.c  bh_cfi.h  bh_config.h  bh_const.h  bh_dl.c  bh_dl.h  bh_dl_iterate.c  bh_dl_iterate.h  bh_dl_monitor.c  bh_dl_monitor.h  bh_elf.c  bh_elf.h  bh_elf_manager.c  bh_elf_manager.h  bh_elf_relocator.c  bh_elf_relocator.h  bh_hub.c  bh_hub.h  bh_jni.c  bh_linker.c  bh_linker.h  bh_linker_mutex.c  bh_linker_mutex.h  bh_log.c  bh_log.h  bh_recorder.c  bh_recorder.h  bh_safe.c  bh_safe.h  bh_sig.h  bh_sleb128.c  bh_sleb128.h  bh_switch.c  bh_switch.h  bh_task.c  bh_task.h  bh_task_manager.c  (+9 more)
APKFortress/Extractor/app/libs/bytehook/src/main/cpp/include/: bytehook.h
APKFortress/Extractor/app/src/androidTest/java/com/shells/extractor/: ExampleInstrumentedTest.java
APKFortress/Extractor/app/src/main/: AndroidManifest.xml
APKFortress/Extractor/app/src/main/cpp/: CMakeLists.txt  extractor.cpp
APKFortress/Extractor/app/src/main/cpp/patches/: bhook_add_static_lib.patch
APKFortress/Extractor/app/src/main/java/com/shells/extractor/: Instruction.java  MainActivity.java  ProxyApplication.java  ReturnIns.java  Test.java
APKFortress/Extractor/app/src/test/java/com/shells/extractor/: ExampleUnitTest.java
APKFortress/Extractor/gradle/: libs.versions.toml
APKFortress/Extractor/gradle/wrapper/: gradle-wrapper.properties
APKFortress/Overall/landLoad/: settings.gradle
APKFortress/Overall/landLoad/app/: build.gradle
APKFortress/Overall/landLoad/app/release/: output-metadata.json
APKFortress/Overall/landLoad/app/release/baselineProfiles/0/: app-release.dm
APKFortress/Overall/landLoad/app/release/baselineProfiles/1/: app-release.dm
APKFortress/Overall/landLoad/app/src/androidTest/java/com/shells/land/: ExampleInstrumentedTest.java
APKFortress/Overall/landLoad/app/src/main/: AndroidManifest.xml
APKFortress/Overall/landLoad/app/src/main/java/com/shells/land/: MainActivity.java  ProxyApplication.java  Refinvoke.java
APKFortress/Overall/landLoad/app/src/main/res/layout/: activity_main.xml
APKFortress/Overall/landLoad/app/src/test/java/com/shells/land/: ExampleUnitTest.java
APKFortress/Overall/landLoad/gradle/wrapper/: gradle-wrapper.properties
APKFortress/Overall/notLandLoad/: settings.gradle
APKFortress/Overall/notLandLoad/app/: build.gradle
APKFortress/Overall/notLandLoad/app/src/androidTest/java/com/shells/notland/: ExampleInstrumentedTest.java
APKFortress/Overall/notLandLoad/app/src/main/: AndroidManifest.xml
APKFortress/Overall/notLandLoad/app/src/main/java/com/shells/notland/: MainActivity.java
APKFortress/Overall/notLandLoad/app/src/main/res/values/: strings.xml  themes.xml
APKFortress/Overall/notLandLoad/app/src/main/res/values-night/: themes.xml
APKFortress/Overall/notLandLoad/app/src/test/java/com/shells/notland/: ExampleUnitTest.java
APKFortress/Overall/notLandLoad/gradle/wrapper/: gradle-wrapper.properties
BinStructParser/: README.md
BinStructParser/DexReader/: DexReader.cpp  DexReader.h  DexReader.sln  DexReader.vcxproj  DexReader.vcxproj.filters  dmeo_mutf.cpp  test.cpp
BinStructParser/DexReader/DexReader/x64/Debug/: DexReader.exe.recipe
BinStructParser/DexReader/DexReader/x64/Debug/DexReader.tlog/: Cl.items.tlog  DexReader.lastbuildstate  link.secondary.1.tlog
BinStructParser/ELFReader/: ELFReader.cpp  ELFReader.h  ELFReader.sln  ELFReader.vcxproj  ELFReader.vcxproj.filters  test.cpp
BinStructParser/ELFReader/ELFReader/x64/Debug/: ELFReader.exe.recipe
BinStructParser/ELFReader/ELFReader/x64/Debug/ELFReader.tlog/: Cl.items.tlog  ELFReader.lastbuildstate  link.secondary.1.tlog
BinStructParser/ELFReader/ELFReader/x64/Release/: ELFReader.exe.recipe
BinStructParser/ELFReader/ELFReader/x64/Release/ELFReader.tlog/: Cl.items.tlog  ELFReader.lastbuildstate  link.secondary.1.tlog
ReToolkit/: settings.gradle  开发日志.md
ReToolkit/app/: build.gradle
ReToolkit/app/libs/sandhook/: sandhook_native.cpp
ReToolkit/app/libs/universal/: libdobby.dylib
ReToolkit/app/src/androidTest/java/com/android/retoolkit/: ExampleInstrumentedTest.java
ReToolkit/app/src/main/: AndroidManifest.xml
ReToolkit/app/src/main/assets/: xposed_init
ReToolkit/app/src/main/cpp/: CMakeLists.txt  retoolkit.cpp
ReToolkit/app/src/main/cpp/module/: anti2dbg.cpp  anti2dbg.h
ReToolkit/app/src/main/cpp/utils/: libcHook.cpp  libcHook.h
ReToolkit/app/src/main/java/com/android/retoolkit/: AntiAntiDebug.java  MainActivity.java  MainModule.java  MonitorService.java  SslUnpinModule.java  test.java
ReToolkit/app/src/main/res/values/: strings.xml  themes.xml
ReToolkit/app/src/main/res/values-night/: themes.xml
ReToolkit/app/src/test/java/com/android/retoolkit/: ExampleUnitTest.java
ReToolkit/gradle/wrapper/: gradle-wrapper.properties
SentinelDroid/: settings.gradle
SentinelDroid/app/: build.gradle
SentinelDroid/app/src/androidTest/java/com/anti/sentineldroid/: ExampleInstrumentedTest.java
SentinelDroid/app/src/main/: AndroidManifest.xml
SentinelDroid/app/src/main/cpp/: CMakeLists.txt  SentinelDroid.cpp
SentinelDroid/app/src/main/cpp/modules/AntiDebug/: AntiDebug.cpp  AntiDebug.h
SentinelDroid/app/src/main/cpp/modules/FridaDetector/: FridaDetector.cpp  FridaDetector.h
SentinelDroid/app/src/main/cpp/modules/RootDetector/: RootDetector.cpp
SentinelDroid/app/src/main/cpp/modules/XposedDetector/: XposedDetector.cpp  XposedDetector.h
SentinelDroid/app/src/main/java/com/anti/sentineldroid/: AntiDebug.java  IDetectorCallback.java  MainActivity.java
SentinelDroid/app/src/main/res/values/: strings.xml  themes.xml
SentinelDroid/app/src/main/res/values-night/: themes.xml
SentinelDroid/app/src/test/java/com/anti/sentineldroid/: ExampleUnitTest.java
SentinelDroid/gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
